data/derived/sp14/progs/unify/prog2164.ml.out
Characters 64-78:
  | hd::l' -> 1 + listReverse l';;
                  ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
